@@ -1,3 +1,6 @@
+2009-12-27  Ionut Biru <ionut@archlinux.ro>
+
+	* subversion 1.6.6-3: adding svn bash completion script
 
 2009-08-07  Douglas Soares de Andrade  <douglas@archlinux.org>
 
